Added default data using context

--- a/NotesApp.Web/Views/Notes/Create.cshtml
+++ b/NotesApp.Web/Views/Notes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model NotesApp.Web.Models.NoteCreateModel
+﻿@model NotesApp.Web.Models.Data.NoteCreateModel
 
 @{
     ViewData["Title"] = "Create";
