--- a/NotesApp.Web/Views/Notes/Details.cshtml
+++ b/NotesApp.Web/Views/Notes/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model NotesApp.Web.Models.NoteDetailsModel
+@model NotesApp.Web.Models.Data.NoteDetailsModel
 
 @{
     ViewData["Title"] = "Details";
