--- a/NotesApp.Web/Views/Notes/Index.cshtml
+++ b/NotesApp.Web/Views/Notes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<NotesApp.Web.Models.NoteViewModel>
+﻿@model IEnumerable<NotesApp.Web.Models.Data.NoteViewModel>
 
 @{ 
     ViewData["Title"] = "Notes";
