--- a/NotesApp.Web/Views/_ViewImports.cshtml
+++ b/NotesApp.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using NotesApp.Web
-@using NotesApp.Web.Models
+@using NotesApp.Web.Models.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
