--- a/NotesApp.Web/Views/Notes/_ViewNote.cshtml
+++ b/NotesApp.Web/Views/Notes/_ViewNote.cshtml
@@ -1,4 +1,4 @@
-﻿@model NotesApp.Web.Models.NoteViewModel
+﻿@model NotesApp.Web.Models.Data.NoteViewModel
 @*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
